PortalPackage/ Enrollment Rx Core/objects/Friend_Referral__c.object
<CustomObject>
    <description>Tracks one user referring one of their friends.</description>
    <fields>
        <fullName>Person_Referred__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person whose friend referred them.</description>
        <inlineHelpText>The person whose friend referred them.</inlineHelpText>
        <label>Person Referred</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referred By</relationshipLabel>
        <relationshipName>Friend_Referrals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person who referred their friend.</description>
        <inlineHelpText>The person who referred their friend.</inlineHelpText>
        <label>Referrer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Friend Referrals</relationshipLabel>
        <relationshipName>Friend_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Via__c</fullName>
        <description>The medium by which the referral took place, e.g. &quot;Phone&quot;.</description>
        <inlineHelpText>The medium by which the referral took place, e.g. &quot;Phone&quot;.</inlineHelpText>
        <label>Via</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Friend Referral</label>
    <nameField>
        <displayFormat>FR-{0000}</displayFormat>
        <label>Facebook Referral Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Friend Referrals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>